# Monster-Brawl-app

./: .env.example  Cargo.toml  Makefile  README.md  docker-postgres.yaml  monster_brawl.http
migrations/2024-02-05-215527_create_monsters/: down.sql  up.sql
migrations/2024-02-05-215534_create_battles/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs
src/domain/models/: battle.rs  mod.rs  monster.rs
src/handlers/: mod.rs
src/handlers/battles/: create_battle.rs  delete_battle.rs  get_battle_by_id.rs  get_battles.rs  mod.rs
src/handlers/monsters/: create_monster.rs  delete_monster_by_id.rs  get_monster_by_id.rs  get_monsters.rs  import_csv.rs  import_monsters_csv.rs  mod.rs  update_monster.rs
src/infra/db/: database.rs  schema.rs
src/infra/repositories/: battles.rs  mod.rs  monsters.rs
src/utils/: test_utils.rs
src/utils/files/: monsters-empty-monster.csv
tests/: battles.rs  monsters.rs  utils.rs
tests/files/: monsters-correct.csv  monsters-wrong-column.csv
