[package]
name = "monster-brawl"
version = "0.1.0"
authors = ["Esteban Velasquez <estebanvelasquezcardeno@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
